--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -7,6 +7,9 @@
 		@media (min-width: $screen-sm){
 			padding-bottom: 1.5rem;
 		}
+		@media (min-width: $screen-md){
+			padding: 1rem 0;
+		}
 		
 		&-logo svg {
 			width: 130px;
@@ -37,6 +40,11 @@
 				margin-bottom: 1rem;
 			}
 			
+			@media (min-width: $screen-md){
+				padding-left: 0;
+				margin-bottom: 0;
+			}
+			
 			a {
 				display: block;
 				font-size: $font-size-base - 1;
@@ -49,9 +57,23 @@
 					margin-bottom: 0;
 					margin-right: 3rem;
 				}
+				@media (min-width: $screen-md){
+					margin-right: 5rem;
+					text-decoration: none;
+					color: #fff;
+				}
+				
 				
 				&:last-child {
 					margin: 0;
+				}
+				.icon {
+					stroke: currentColor;
+					font-size: 1.2em;
+					margin-left: 3px;
+					@media (max-width: $screen-md){
+						display: none;
+					}
 				}
 			}
 		}
@@ -63,6 +85,10 @@
 			@media (min-width: $screen-sm){
 				padding-left: 4rem;
 			}
+			@media (min-width: $screen-md){
+				padding-left: 0;
+				margin-top: 0;
+			}
 			
 			.header-button {
 				float: left;
@@ -72,6 +98,9 @@
 				
 				@media (min-width: $screen-sm){
 					margin-right: 3rem;
+				}
+				@media (min-width: $screen-md){
+					margin-right: 0;
 				}
 				
 				&:last-of-type {
@@ -92,9 +121,21 @@
 					padding: 7px 8px;
 					background: $brown-darker;
 					border-radius: 50%;
+					@media (min-width: $screen-md){
+						padding: 0 2px;
+						background: $brown-light;
+						.icon {
+							fill: $header-top-bg;
+							font-size: 1.1em;
+							margin-top: 5px;
+						}
+					}
 				}
 				&__text {
 					padding-left: 0.5rem;
+					@media (min-width: $screen-md){
+						padding-left: 1rem;
+					}
 				}
 			}
 		}
@@ -102,6 +143,31 @@
 		&-feedback {
 			margin-top: -31px;
 			text-align: right;
+			
+			@media (min-width: $screen-md){
+				margin-top: 0;
+				
+				.tel {
+					position: absolute;
+					right: 0;
+					bottom: -9rem;
+					width: 190px;
+					
+					font-size: $font-size-large;
+					line-height: 1.5;
+					color: $gray-base;
+					
+					.icon {
+						padding: 5px;
+						background: $brand-primary;
+						fill: #fff;
+						width: 1.5em;
+						height: 1.5em;
+						margin-right: 0.5rem;
+						border-radius: 50%;
+					}
+				}
+			}
 		}
 		
 	}
