--- a/src/sass/template_styles.scss
+++ b/src/sass/template_styles.scss
@@ -9,4 +9,6 @@
 @import 'components/news';
 @import 'components/contacts';
 @import 'components/servs';
+@import 'components/serv-button';
+@import 'components/search';
 @import 'components/carousel';
