--- a/src/sass/bootstrap-custom/_dropdowns.scss
+++ b/src/sass/bootstrap-custom/_dropdowns.scss
@@ -33,19 +33,21 @@
   top: 100%;
   left: 0;
   z-index: $zindex-dropdown;
-  display: none; // none by default, but block on "open" of the menu
+  //display: none; // none by default, but block on "open" of the menu = bad solution
+  display: block;
+  visibility: hidden; // better
   float: left;
   min-width: 160px;
-  padding: 5px 0;
-  margin: 2px 0 0; // override default ul
+  padding: 2rem 0;
+  margin: 3px 0 0; // override default ul
   list-style: none;
   font-size: $font-size-base;
   text-align: left; // Ensures proper alignment if parent has it changed (e.g., modal footer)
   background-color: $dropdown-bg;
   border: 1px solid $dropdown-fallback-border; // IE8 fallback
   border: 1px solid $dropdown-border;
-  border-radius: $border-radius-base;
-  @include box-shadow(0 6px 12px rgba(0,0,0,.175));
+  border-radius: $border-radius-large;
+  @include box-shadow(0 2px 6px rgba(0,0,0,.2));
   background-clip: padding-box;
 
   // Aligns the dropdown menu to right
@@ -121,13 +123,32 @@
 .open {
   // Show the menu
   > .dropdown-menu {
-    display: block;
+    //display: block;
+	visibility: visible;
   }
 
   // Remove the outline when :focus is triggered
   > a {
     outline: 0;
   }
+}
+.dropdown-hover-action {
+	
+	// чтобы hover не пропадал при переходе от кнопки к выпадашке, если менжду ними есть расстояние
+	&::after {
+		content: '';
+		display: block;
+		width: 100%;
+		height: 5px;
+		position: absolute;
+		left: 0;
+		bottom: -5px;
+	}
+	
+	&:hover > .dropdown-menu {
+		//display: block;
+		visibility: visible;
+	}
 }
 
 // Menu positioning
