--- a/src/sass/bootstrap-custom/_modals.scss
+++ b/src/sass/bootstrap-custom/_modals.scss
@@ -53,8 +53,8 @@
   background-color: $modal-content-bg;
   border: 1px solid $modal-content-fallback-border-color; //old browsers fallback (ie8 etc)
   border: 1px solid $modal-content-border-color;
-  border-radius: $border-radius-large;
-  @include box-shadow(0 3px 9px rgba(0,0,0,.5));
+  border-radius: $border-radius-base;
+  @include box-shadow(0 2px 6px rgba(0,0,0,.2));
   background-clip: padding-box;
   // Remove focus outline from opened modal
   outline: 0;
@@ -97,6 +97,9 @@
 .modal-body {
   position: relative;
   padding: $modal-inner-padding;
+  > *:first-child {
+	  margin-top: 0;
+  }
 }
 
 // Footer (for actions)
