--- a/src/sass/bootstrap-custom/_type.scss
+++ b/src/sass/bootstrap-custom/_type.scss
@@ -44,8 +44,8 @@ h1, h2, h3, h4, h5, h6,
 h1, .h1,
 h2, .h2,
 h3, .h3 {
-  margin-top: $line-height-computed;
-  margin-bottom: ($line-height-computed / 2);
+  margin-top: 1em;
+  margin-bottom: 1em;
 
   small,
   .small {
@@ -55,8 +55,8 @@ h3, .h3 {
 h4, .h4,
 h5, .h5,
 h6, .h6 {
-  margin-top: ($line-height-computed / 2);
-  margin-bottom: ($line-height-computed / 2);
+  margin-top: 1em;
+  margin-bottom: 1em;
 
   small,
   .small {
@@ -76,11 +76,11 @@ h6, .h6 { font-size: $font-size-h6; }
 // -------------------------
 
 p {
-  margin: 0 0 ($line-height-computed / 2);
+  margin: 0 0 1em;
 }
 
 .lead {
-  margin-bottom: $line-height-computed;
+  margin-bottom: 1em;
   font-size: floor(($font-size-base * 1.15));
   font-weight: 300;
   line-height: 1.4;
@@ -169,7 +169,7 @@ mark,
 ul,
 ol {
   margin-top: 0;
-  margin-bottom: ($line-height-computed / 2);
+  margin-bottom: 1em;
   ul,
   ol {
     margin-bottom: 0;
@@ -180,6 +180,10 @@ ul {
 	list-style-type: disc;
 	list-style-position: outside;
 	padding-left: 2rem;
+	
+	li {
+		margin-bottom: 1em;
+	}
 }
 
 ol {
@@ -189,6 +193,10 @@ ol {
 	
 	> li {
 		position: relative;
+	}
+	
+	li {
+		margin-bottom: ($line-height-computed / 2);
 	}
 	
 	> li:before {
@@ -207,6 +215,10 @@ ol {
 		background: $gray-lighter;
 		border-radius: $font-size-base / 2;
 	}
+	
+	ol, ul {
+		margin-top: ($line-height-computed / 2);
+	}
 }
 
 // List options
@@ -215,6 +227,9 @@ ol {
 @mixin list-unstyled {
   padding-left: 0;
   list-style: none;
+  > li {
+	  margin-bottom: 0;
+  }
   > li:before {
 	  display: none;
   }
