--- a/src/sass/components/_layout.scss
+++ b/src/sass/components/_layout.scss
@@ -2,6 +2,12 @@
 	max-width: $sidebar-width;
 }
 
+.workarea {
+	>*:first-child {
+		margin-top: 0;
+	}
+}
+
 .banners {
 	margin-top: 50px;
 	&__item {
@@ -16,3 +22,4 @@
 
 @import 'header';
 @import 'footer';
+@import 'page-aside';
