--- a/src/sass/components/_layout.scss
+++ b/src/sass/components/_layout.scss
@@ -1,3 +1,10 @@
+@mixin flex-default{
+	display: flex;
+	flex-flow: row nowrap;
+	justify-content: flex-start;
+	align-items: center;
+}
+
 .sidebar {
 	max-width: $sidebar-width;
 }
