--- a/src/sass/bootstrap-custom/_forms.scss
+++ b/src/sass/bootstrap-custom/_forms.scss
@@ -33,7 +33,7 @@ label {
   display: inline-block;
   max-width: 100%; // Force IE8 to wrap long content (see https://github.com/twbs/bootstrap/issues/13141)
   margin-bottom: 5px;
-  font-weight: bold;
+  font-size: $font-size-base - 1;
 }
 
 
@@ -115,7 +115,7 @@ output {
   display: block;
   width: 100%;
   height: $input-height-base; // Make inputs at least the height of their button counterpart (base line-height + padding + border)
-  padding: $padding-base-vertical $padding-base-horizontal;
+  padding: ($padding-base-vertical + 2) $padding-base-horizontal;
   font-size: $font-size-base;
   line-height: $line-height-base;
   color: $input-color;
@@ -123,8 +123,8 @@ output {
   background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
   border: 1px solid $input-border;
   border-radius: $input-border-radius; // Note: This has no effect on <select>s in some browsers, due to the limited stylability of <select>s in CSS.
-  @include box-shadow(inset 0 1px 1px rgba(0,0,0,.075));
-  @include transition(border-color ease-in-out .15s, box-shadow ease-in-out .15s);
+  //@include box-shadow(inset 0 1px 1px rgba(0,0,0,.075));
+  //@include transition(border-color ease-in-out .15s, box-shadow ease-in-out .15s);
 
   // Customize the `:focus` state to imitate native WebKit styles.
   //@include form-control-focus;
@@ -434,7 +434,7 @@ input[type="checkbox"] {
   @include form-control-validation($state-warning-text, $state-warning-text, $state-warning-bg);
 }
 .has-error {
-  @include form-control-validation($state-danger-text, $state-danger-text, $state-danger-bg);
+  @include form-control-validation($state-danger-text, $state-danger-border, $state-danger-bg);
 }
 
 // Reposition feedback icon if input has visible label above
@@ -461,11 +461,15 @@ input[type="checkbox"] {
   color: lighten($text-color, 25%); // lighten the text some for contrast
 }
 @mixin require-star {
+	display: inline-block;
 	font-size: 27px;
 	line-height: 1;
 	font-weight: bold;
 	color: $brand-danger;
+	// положение найдено экспериментальным путем
 	vertical-align: middle;
+	height: 0.8em;
+	margin-top: 0.1em;
 }
 .require-star {
 	@include require-star;
