--- a/src/sass/bootstrap-custom/_type.scss
+++ b/src/sass/bootstrap-custom/_type.scss
@@ -41,17 +41,20 @@ h1, h2, h3, h4, h5, h6,
   @include heading;
 }
 
-h1, .h1,
-h2, .h2,
-h3, .h3 {
+h1, .h1 {
+	margin-top: 0.7em;
+	margin-bottom: 0.6em;
+}
+h2, .h2 {
   margin-top: 1em;
-  margin-bottom: 1em;
+  margin-bottom: 0.7em;
 
   small,
   .small {
     font-size: 65%;
   }
 }
+h3, .h3,
 h4, .h4,
 h5, .h5,
 h6, .h6 {
