--- a/src/sass/bootstrap-custom/mixins/_forms.scss
+++ b/src/sass/bootstrap-custom/mixins/_forms.scss
@@ -20,11 +20,13 @@
   // Set the border and box shadow on specific inputs to match
   .form-control {
     border-color: $border-color;
-    @include box-shadow(inset 0 1px 1px rgba(0,0,0,.075)); // Redeclare so transitions work
+	background-color: $background-color;
+    //@include box-shadow(inset 0 1px 1px rgba(0,0,0,.075)); // Redeclare so transitions work
     &:focus {
-      border-color: darken($border-color, 10%);
-      $shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 6px lighten($border-color, 20%);
-      @include box-shadow($shadow);
+      //border-color: darken($border-color, 10%);
+      //$shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 6px lighten($border-color, 20%);
+      //@include box-shadow($shadow);
+	  outline: none;
     }
   }
   // Set validation states also for addons
