--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -272,6 +272,7 @@
 	&__title {
 		@include heading;
 		font-size: $font-size-base;
+		text-transform: uppercase;
 		
 		@media (min-width: $screen-md) {
 			font-size: $font-size-large;
