--- a/src/sass/components/_carousel.scss
+++ b/src/sass/components/_carousel.scss
@@ -14,8 +14,40 @@
 		}
 	}
 	
+	&--home &__item {
+		min-height: 134px;
+		height: 42vw;
+		max-height: 267px;
+		
+		@media (min-width: 880px){
+			height: auto;
+			max-height: 100%;
+		}
+		@media (min-width: $screen-md){
+			min-height: 212px;
+		}
+		@media (min-width: $screen-lg){
+			min-height: 267px;
+		}
+	}
+	
 	&__img {
-		width: 100%;
+		position: absolute;
+		right: -7%;
+		height: 100%;
+		width: auto;
+		
+		@media (min-width: $screen-sm){
+			left: 50%;
+			right: auto;
+			transform: translateX(-50%);
+		}
+		@media (min-width: 880px){
+			width: 100%;
+			height: auto;
+			position: static;
+			transform: none;
+		}
 	}
 	
 }
@@ -27,7 +59,7 @@
 	
 	@media (min-width: $screen-sm) {
 		position: absolute;
-		left: 10px;
+		left: 15px;
 		top: 50%;
 		margin: 0;
 		transform: translateY(-50%);
