--- a/src/sass/components/_layout.scss
+++ b/src/sass/components/_layout.scss
@@ -1,4 +1,4 @@
-@mixin flex-default($align: 'center', $justify: flex-start){
+@mixin flex-default($align: center, $justify: flex-start){
 	display: flex;
 	flex-flow: row nowrap;
 	justify-content: $justify;
