--- a/src/sass/components/menus/_sidebar-menu.scss
+++ b/src/sass/components/menus/_sidebar-menu.scss
@@ -13,6 +13,7 @@
 		border-radius: $border-radius-base;
 		padding: 1rem;
 		text-align: right;
+		min-height: 55px; // по макету
 		
 		&:hover {
 			color: $sidebar-menu-hover-color;
@@ -28,8 +29,8 @@
 	&__icon {
 		font-size: 1.5em;
 		line-height: 1;
-		padding: 1rem;
+		padding: 0.5rem 1rem;
 		padding-right: 0;
-		width: 25px + 10px * 2;
+		width: 3rem;
 	}
 }
