--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -197,8 +197,8 @@
 						padding: 5px;
 						background: $brand-primary;
 						fill: #fff;
-						width: 1.5em;
-						height: 1.5em;
+						width: 2.3rem;
+						height: 2.3rem;
 						margin-right: 0.5rem;
 						border-radius: 50%;
 					}
