--- a/src/sass/_override-variables.scss
+++ b/src/sass/_override-variables.scss
@@ -870,10 +870,10 @@ $breadcrumb-padding-horizontal: 8px;
 //** Breadcrumb background color
 $breadcrumb-bg:                 $gray-lighter;
 //** Breadcrumb text color
-$breadcrumb-color:              $brown-darker;
+$breadcrumb-color:              $brown-dark;
 //** Text color of current page in the breadcrumb
-$breadcrumb-active-color:       $brown-darker;
-$breadcrumb-hover-color:       $brown-dark;
+$breadcrumb-active-color:       $brown-dark;
+$breadcrumb-hover-color:       $brown-darker;
 //** Textual separator for between breadcrumb elements
 //$breadcrumb-separator:          ">";
 $breadcrumb-icon-size:          10px;
