--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -4,7 +4,7 @@
 	
 	&__panel {
 		border-width: 2px;
-		margin-bottom: 40px;
+		margin-bottom: 0.5rem;
 		
 		> .row {
 			@include flex-default(stratch);
